client/src/index.css
@import url('https://rsms.me/inter/inter.css');
html, button { font-family: 'Inter', sans-serif; }
@supports (font-variation-settings: normal) {
  html, button { font-family: 'Inter var', sans-serif; }
}

body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif; */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}





:root {
  --red: #ff3c3c;
  --light-red: #ffd7d7;
  --yellow: #fed648;
  --light-yellow: #fff8d2;
  --green: #32b43f;
  --light-green: #e9ffe5;
  --blue: #0fc1fa;
  --light-blue: #dff3ff;
  
  --header: #1954a0;
  --background: #174682;
}

